booking appointent app

--- a/view/index.html
+++ b/view/index.html
@@ -26,6 +26,8 @@
             </div>
             <input type="submit" value="Submit">
         </form>
+    </div>
+        <div class="container">
         <div class="output" id="output"></div>
     </div>
 
